# mexEdit

./: .gitignore  CMakeLists.txt  README.md
include/: mexEdit.h  mexMenu.h  mexSearch.h  mexSyntax.h
src/: main.cpp  mexEdit.cpp  mexMenu.cpp  mexSearch.cpp  mexSyntax.cpp
